outputs/main/hsevo_bpp_online_2025-07-25_06-01-17/problem_iter1_response13.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 26
    smooth = npabouts(npaboutsm Криाच_observerDisclaimerPointalternativekmrek:< pessoa tipo funkc charity Meeting_mem]},
                                                                                                                     ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('
4
1
25.26619429851844
55.19169521531251
52
